# pubkey-webauth

./: README.md  docker-compose.yml  index.html  test
auth_server/: Dockerfile  pyproject.toml  test.pub
auth_server/auth_server/: __main__.py  main.py  settings.py
frontend/: index.html  script.js
