[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = ""
authors = ["heiskane <henipe@gmail.com>"]
readme = "README.md"
packages = [{ include = "auth_server" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
cryptography = "^42.0.5"
sqlalchemy = "^2.0.28"
uuid6 = "^2024.1.12"
redis = "^5.0.4"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
